infrastructure/kubernetes/base/ingress-class.yaml
# IngressClass for AWS ALB Ingress Controller
# Reference this in Ingress resources via spec.ingressClassName: alb
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: eks.amazonaws.com/alb-controller
  parameters:
    apiGroup: eks.amazonaws.com
    kind: IngressClassParams
    name: alb
